--- a/Games.html
+++ b/Games.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redben's Games</title>
+    <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Global Styles */
@@ -134,7 +134,7 @@
 </head>
 <body>
     <div class="topbar">
-        <h1>Redben's Games</h1>
+        <h1>Void's Games</h1>
         <div class="nav-buttons">
             <a href="./" class="nav-button">Home</a>
             <a href="./Games.html" class="nav-button2">Games</a>
