--- a/Games.html
+++ b/Games.html
@@ -142,7 +142,7 @@
         </div>
     </div>
     <div class="content">
-        <a href="/Games/burritobison" class="game-button">
+        <a href="/games/burritobison" class="game-button">
             <div class="image-container">
                 <img src="./img/burrito-bison-image.png" alt="Burrito Bison">
                 <div class="tooltip">Burrito Bison</div>
