--- a/Games.html
+++ b/Games.html
@@ -142,13 +142,13 @@
         </div>
     </div>
     <div class="content">
-        <a href="/games/burritobison" class="game-button">
+        <a href="/Iframe/BurritoBision.html" class="game-button">
             <div class="image-container">
                 <img src="./img/burrito-bison-image.png" alt="Burrito Bison">
                 <div class="tooltip">Burrito Bison</div>
             </div>
         </a>
-        <a href="/Games/subwaysurfers" class="game-button">
+        <a href="/Iframe/subwaysurfers" class="game-button">
             <div class="image-container">
                 <img src="./img/subwaysurfers.png" alt="Subway Surfers">
                 <div class="tooltip">Subway Surfers</div>
