--- a/Iframe/subwaysurfers.html
+++ b/Iframe/subwaysurfers.html
@@ -115,9 +115,9 @@
     <div class="topbar">
         <h1>Iframe Fullscreen Example</h1>
         <div class="nav-buttons">
-            <a href="#" class="nav-button" onclick="changeIframeSrc('/index.html')">Home</a>
-            <a href="#" class="nav-button" onclick="changeIframeSrc('/Games.html')">Games</a>
-            <a href="#" class="nav-button" onclick="changeIframeSrc('/About.html')">About</a>
+            <a href="/index.html" class="nav-button">Home</a>
+            <a href="/games.html" class="nav-button">Games</a>
+            <a href="/About.html" class="nav-button">About</a>
         </div>
     </div>
     <div class="content">
