--- a/Iframe/subwaysurfers - Copy (7).html
+++ b/Iframe/subwaysurfers - Copy (7).html
@@ -115,14 +115,14 @@
     <div class="topbar">
         <h1>Iframe Fullscreen Example</h1>
         <div class="nav-buttons">
-            <a href="./" class="nav-button">Home</a>
-            <a href="./Games.html" class="nav-button">Games</a>
-            <a href="./About.html" class="nav-button">About</a>
+            <a href="#" class="nav-button" onclick="changeIframeSrc('/index.html')">Home</a>
+            <a href="#" class="nav-button" onclick="changeIframeSrc('/Games.html')">Games</a>
+            <a href="#" class="nav-button" onclick="changeIframeSrc('/About.html')">About</a>
         </div>
     </div>
     <div class="content">
         <div class="iframe-container">
-            <iframe id="gameIframe" src="https://example.com" frameborder="0"></iframe>
+            <iframe id="gameIframe" src="/Games/subway-surfers" frameborder="0"></iframe>
             <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="./img/fullscreen.png" id="full"></button>
         </div>
     </div>
