--- a/Iframe/subwaysurfers.html
+++ b/Iframe/subwaysurfers.html
@@ -123,7 +123,7 @@
     <div class="content">
         <div class="iframe-container">
             <iframe id="gameIframe" src="/Games/subway-surfers" frameborder="0"></iframe>
-            <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="./img/fullscreen.png" id="full"></button>
+            <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="/img/fullscreen.png" id="full"></button>
         </div>
     </div>
 
