--- a/Iframe/BurritoBision - Copy (7).html
+++ b/Iframe/BurritoBision - Copy (7).html
@@ -115,15 +115,15 @@
     <div class="topbar">
         <h1>Iframe Fullscreen Example</h1>
         <div class="nav-buttons">
-            <a href="#" class="nav-button" onclick="changeIframeSrc('/index.html')">Home</a>
-            <a href="#" class="nav-button" onclick="changeIframeSrc('/Games.html')">Games</a>
-            <a href="#" class="nav-button" onclick="changeIframeSrc('/About.html')">About</a>
+            <a href="/index.html" class="nav-button">Home</a>
+            <a href="/games.html" class="nav-button">Games</a>
+            <a href="/About.html" class="nav-button">About</a>
         </div>
     </div>
     <div class="content">
         <div class="iframe-container">
-            <iframe id="gameIframe" src="/Games/subway-surfers" frameborder="0"></iframe>
-            <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="./img/fullscreen.png" id="full"></button>
+            <iframe id="gameIframe" src="/Games/BurritoBison/" frameborder="0"></iframe>
+            <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="/img/fullscreen.png" id="full"></button>
         </div>
     </div>
 
