--- a/Iframe/subwaysurfers.html
+++ b/Iframe/subwaysurfers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe Fullscreen Example</title>
+    <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Global Styles */
