--- a/Iframe/subwaysurfers.html
+++ b/Iframe/subwaysurfers.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <div class="topbar">
-        <h1>Iframe Fullscreen Example</h1>
+        <h1>Void's Games</h1>
         <div class="nav-buttons">
             <a href="/index.html" class="nav-button">Home</a>
             <a href="/games.html" class="nav-button">Games</a>
