--- a/Games.html
+++ b/Games.html
@@ -152,6 +152,10 @@
             <div class="image-container">
                 <img src="./img/subwaysurfers.png" alt="Subway Surfers">
                 <div class="tooltip">Subway Surfers</div>
+        <a href="/Games/basketball-stars/" class="game-button">
+            <div class="image-container">
+                <img src="/img/BAS.webp" alt="Subway Surfers">
+                <div class="tooltip">Subway Surfers</div>
             </div>
         </a>
     </div>
