--- a/Games.html
+++ b/Games.html
@@ -233,25 +233,25 @@
         </a>
         <a href="/Iframe/riddleschool2" class="game-button">
             <div class="image-container">
-                <img src="./img/riddleschool2.webp" alt="Riddle School 2">
+                <img src="./img/riddleschool.webp" alt="Riddle School 2">
                 <div class="tooltip">Riddle School 2</div>
             </div>
         </a>
         <a href="/Iframe/riddleschool3" class="game-button">
             <div class="image-container">
-                <img src="./img/riddleschool3.webp" alt="Riddle School 3">
+                <img src="./img/riddleschool.webp" alt="Riddle School 3">
                 <div class="tooltip">Riddle School 3</div>
             </div>
         </a>
         <a href="/Iframe/riddleschool4" class="game-button">
             <div class="image-container">
-                <img src="./img/riddleschool4.webp" alt="Riddle School 4">
+                <img src="./img/riddleschool.webp" alt="Riddle School 4">
                 <div class="tooltip">Riddle School 4</div>
             </div>
         </a>
         <a href="/Iframe/riddleschool5" class="game-button">
             <div class="image-container">
-                <img src="./img/riddleschool5.webp" alt="Riddle School 5">
+                <img src="./img/riddleschool.webp" alt="Riddle School 5">
                 <div class="tooltip">Riddle School 5</div>
             </div>
         </a>
