--- a/Games.html
+++ b/Games.html
@@ -281,7 +281,7 @@
         </a>
         <a href="/Iframe/temple-run-2" class="game-button">
             <div class="image-container">
-                <img src="./img/temple-run-2.webp" alt="Temple Run 2">
+                <img src="./img/temple-run.webp" alt="Temple Run 2">
                 <div class="tooltip">Temple Run 2</div>
             </div>
         </a>
