--- a/Games.html
+++ b/Games.html
@@ -215,7 +215,7 @@
         </a>
         <a href="/Iframe/motox3m-spooky" class="game-button">
             <div class="image-container">
-                <img src="./img/motox3m-spooky.webp" alt="Moto X3M Spooky">
+                <img src="./img/moto-spook.webp" alt="Moto X3M Spooky">
                 <div class="tooltip">Moto X3M Spooky</div>
             </div>
         </a>
