--- a/Iframe/basketball-stars.html
+++ b/Iframe/basketball-stars.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe Fullscreen Example</title>
+    <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Global Styles */
@@ -113,7 +113,7 @@
 </head>
 <body>
     <div class="topbar">
-        <h1>Iframe Fullscreen Example</h1>
+        <h1>Void's Games</h1>
         <div class="nav-buttons">
             <a href="/index.html" class="nav-button">Home</a>
             <a href="/games.html" class="nav-button">Games</a>
