--- a/Iframe/impossiblequiz.html
+++ b/Iframe/impossiblequiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe Fullscreen Example</title>
+    <title>Void's Game</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Global Styles */
@@ -113,7 +113,7 @@
 </head>
 <body>
     <div class="topbar">
-        <h1>Iframe Fullscreen Example</h1>
+        <h1>Void's Game</h1>
         <div class="nav-buttons">
             <a href="/index.html" class="nav-button">Home</a>
             <a href="/games.html" class="nav-button">Games</a>
@@ -122,7 +122,7 @@
     </div>
     <div class="content">
         <div class="iframe-container">
-            <iframe id="gameIframe" src="/Games/BurritoBison/" frameborder="0"></iframe>
+            <iframe id="gameIframe" src="/Games/impossiblequiz/" frameborder="0"></iframe>
             <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="/img/fullscreen.png" id="full"></button>
         </div>
     </div>
