--- a/Iframe/motox3m.html
+++ b/Iframe/motox3m.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <div class="topbar">
-        <h1>Iframe Fullscreen Example</h1>
+        <h1>Void's Games</h1>
         <div class="nav-buttons">
             <a href="/index.html" class="nav-button">Home</a>
             <a href="/games.html" class="nav-button">Games</a>
@@ -122,7 +122,7 @@
     </div>
     <div class="content">
         <div class="iframe-container">
-            <iframe id="gameIframe" src="/Games/BurritoBison/" frameborder="0"></iframe>
+            <iframe id="gameIframe" src="/Games/motox3m/" frameborder="0"></iframe>
             <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="/img/fullscreen.png" id="full"></button>
         </div>
     </div>
