--- a/Iframe/motox3m-pool.html
+++ b/Iframe/motox3m-pool.html
@@ -122,7 +122,7 @@
     </div>
     <div class="content">
         <div class="iframe-container">
-            <iframe id="gameIframe" src="/Games/BurritoBison/" frameborder="0"></iframe>
+            <iframe id="gameIframe" src="/Games/motox3m-pool/" frameborder="0"></iframe>
             <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="/img/fullscreen.png" id="full"></button>
         </div>
     </div>
