--- a/Iframe/motox3m-pool.html
+++ b/Iframe/motox3m-pool.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe Fullscreen Example</title>
+    <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Global Styles */
@@ -122,7 +122,7 @@
     </div>
     <div class="content">
         <div class="iframe-container">
-            <iframe id="gameIframe" src="/Games/motox3m-pool/" frameborder="0"></iframe>
+            <iframe id="gameIframe" src="/Games/Void's Games/" frameborder="0"></iframe>
             <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="/img/fullscreen.png" id="full"></button>
         </div>
     </div>
