--- a/Games/learntofly2/index.html
+++ b/Games/learntofly2/index.html
@@ -1,9 +1,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Learn to fly 2</title>
-    <link rel="icon" type="image/x-icon" href="learn-to-fly-2.jpg" />
-    <link rel="shortcut icon" type="image/x-icon" href="learn-to-fly-2.jpg" />
+ <title>Home | Schoology</title>
+<link rel="icon" href="https://asset-cdn.schoology.com/sites/all/themes/schoology_theme/favicon.ico">
   </head>
   <body>
     <script src="/js/main.js"></script>
@@ -19,9 +18,8 @@
         player.style.width = "100%";
         player.style.height = "100%";
         container.appendChild(player);
-        player.load("learn-to-fly-2.swf");
+        player.load("learn-to-fly-2-11967.swf");
       });
-      alert("This game is not officially supported by ruffle, so you may see some weird things or the game might crash. This is not a thing we can fix. Sorry!")
     </script>
   </body>
 </html>
