--- a/Games.html
+++ b/Games.html
@@ -147,7 +147,7 @@
                 <div class="tooltip">Burrito Bison</div>
             </div>
         </a>
-        <a href="/Iframe/subwaysurfers" class="game-button">
+        <a href="/Iframe/subsurfers" class="game-button">
             <div class="image-container">
                 <img src="./img/subwaysurfers.png" alt="Subway Surfers">
                 <div class="tooltip">Subway Surfers</div>
