--- a/Games.html
+++ b/Games.html
@@ -279,7 +279,7 @@
                 <div class="tooltip">Stick Slasher</div>
             </div>
         </a>
-        <a href="/Iframe/temple-run-2" class="game-button">
+        <a href="/Iframe/temple2" class="game-button">
             <div class="image-container">
                 <img src="./img/temple-run.webp" alt="Temple Run 2">
                 <div class="tooltip">Temple Run 2</div>
