--- a/Games.html
+++ b/Games.html
@@ -207,7 +207,7 @@
                 <div class="tooltip">Moto X3M</div>
             </div>
         </a>
-        <a href="/Iframe/motox3m-pool" class="game-button">
+        <a href="/Iframe/motoxpool" class="game-button">
             <div class="image-container">
                 <img src="./img/motox3m-pool.webp" alt="Moto X3M Pool">
                 <div class="tooltip">Moto X3M Pool</div>
