--- a/Games.html
+++ b/Games.html
@@ -261,9 +261,9 @@
                 <div class="tooltip">Slope</div>
             </div>
         </a>
-        <a href="/Iframe/snowrider3D" class="game-button">
+        <a href="/Iframe/snowride" class="game-button">
             <div class="image-container">
-                <img src="./img/snowrider3D.webp" alt="Snowrider 3D">
+                <img src="./img/snowride.webp" alt="Snowrider 3D">
                 <div class="tooltip">Snowrider 3D</div>
             </div>
         </a>
@@ -289,7 +289,7 @@
             <div class="image-container">
                 <img src="./img/tiny-fishing.webp" alt="Tiny Fishing">
                 <div class="tooltip">Tiny Fishing</div>
-            </div>
+            </div>SD
         </a>
         <a href="/Iframe/tosstheturtle" class="game-button">
             <div class="image-container">
