--- a/Games.html
+++ b/Games.html
@@ -289,7 +289,7 @@
             <div class="image-container">
                 <img src="./img/tiny-fishing.webp" alt="Tiny Fishing">
                 <div class="tooltip">Tiny Fishing</div>
-            </div>SD
+            </div>
         </a>
         <a href="/Iframe/tosstheturtle" class="game-button">
             <div class="image-container">
