--- a/Games.html
+++ b/Games.html
@@ -212,9 +212,9 @@
                 <div class="tooltip">Moto X3M Spooky</div>
             </div>
         </a>
-        <a href="/Iframe/motox3m-winter" class="game-button">
+        <a href="/Iframe/motoxpool" class="game-button">
             <div class="image-container">
-                <img src="./img/motox3m-winter.webp" alt="Moto X3M Winter">
+                <img src="./img/motoxpool.webp" alt="Moto X3M Winter">
                 <div class="tooltip">Moto X3M Winter</div>
             </div>
         </a>
