--- a/Games.html
+++ b/Games.html
@@ -202,7 +202,7 @@
         </a>
         <a href="/Iframe/motoxpool" class="game-button">
             <div class="image-container">
-                <img src="./img/motox3m-pool.webp" alt="Moto X3M Pool">
+                <img src="./img/motoxpool.webp" alt="Moto X3M Pool">
                 <div class="tooltip">Moto X3M Pool</div>
             </div>
         </a>
