--- a/Games.html
+++ b/Games.html
@@ -206,7 +206,7 @@
                 <div class="tooltip">Moto X3M Pool</div>
             </div>
         </a>
-        <a href="/Iframe/motox3m-spooky" class="game-button">
+        <a href="/Iframe/moto-spook" class="game-button">
             <div class="image-container">
                 <img src="./img/moto-spook.webp" alt="Moto X3M Spooky">
                 <div class="tooltip">Moto X3M Spooky</div>
