--- a/Games.html
+++ b/Games.html
@@ -220,7 +220,7 @@
         </a>
         <a href="/Iframe/riddleschool" class="game-button">
             <div class="image-container">
-                <img src="./img/riddleschool.webp" alt="Riddle School"><h1>1</h1></img>
+                <img src="./img/riddleschool.webp" alt="Riddle School"></img>
                 <div class="tooltip">Riddle School</div>
             </div>
         </a>
