--- a/Games.html
+++ b/Games.html
@@ -152,10 +152,10 @@
                 <div class="tooltip">Basketball Stars</div>
             </div>
         </a>
-        <a href="/Iframe/dune" class="game-button">
+        <a href="/Iframe/Planes" class="game-button">
             <div class="image-container">
-                <img src="./img/dune.webp" alt="Dune">
-                <div class="tooltip">Dune</div>
+                <img src="./img/plane.jpg" alt="Bit plane">
+                <div class="tooltip">Bit Plane</div>
             </div>
         </a>
         <a href="/Iframe/fnaf" class="game-button">
