Update and rename dune.html to Planes.html

--- a/Iframe/Planes.html
+++ b/Iframe/Planes.html
@@ -122,7 +122,7 @@
     </div>
     <div class="content">
         <div class="iframe-container">
-            <iframe id="gameIframe" src="/Games/dune/" frameborder="0"></iframe>
+            <iframe id="gameIframe" src="/Games/Planes/" frameborder="0"></iframe>
             <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="/img/fullscreen.png" id="full"></button>
         </div>
     </div>
