--- a/Games.html
+++ b/Games.html
@@ -158,9 +158,9 @@
                 <div class="tooltip">Bit Plane</div>
             </div>
         </a>
-        <a href="/Iframe/fnaf" class="game-button">
+        <a href="/Iframe/monkey" class="game-button">
             <div class="image-container">
-                <img src="./img/fnaf.webp" alt="FNaF">
+                <img src="./img/monkey.jpeg" alt="Monkey Mart">
                 <div class="tooltip">FNaF</div>
             </div>
         </a>
