--- a/Games.html
+++ b/Games.html
@@ -161,7 +161,7 @@
         <a href="/Iframe/monkey" class="game-button">
             <div class="image-container">
                 <img src="./img/monkey.jpeg" alt="Monkey Mart">
-                <div class="tooltip">FNaF</div>
+                <div class="tooltip">Monkey Mart</div>
             </div>
         </a>
         <a href="/Iframe/funnyshooter2" class="game-button">
