--- a/Games/snowride/index.html
+++ b/Games/snowride/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Snow Rider 3D</title>
+    <title>Snow Rider 3D Unblocked</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <meta name="description" content="Snow Rider 3D, Snow Rider 3D Mathnook, Snow Rider 3D Unblocked">
@@ -19,6 +19,11 @@
 <body style="overflow:hidden; margin:0; padding:0;">
     <div class="webgl-content" style="position: absolute; width: 100%; height: 100%;">
         <div id="gameContainer" style="width: 960px; height: 600px; margin: auto"></div>
+        <!--       <div class="footer">
+            <div class="webgl-logo"></div>
+            <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
+            <div class="title">Snow Rider 3D</div>
+        </div> -->
     </div>
 </body>
 
