--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="nav-buttons">
             <a href="./" class="nav-button2">Home</a>
             <a href="./Games.html" class="nav-button">Games</a>
-            <a href="./chatroom.html" class="nav-button2">Chat room</a>
+            <a href="./chatroom.html" class="nav-button">Chat room</a>
             <a href="./About.html" class="nav-button">About</a>
         </div>
     </div>
