--- a/chatroom.html
+++ b/chatroom.html
@@ -165,7 +165,7 @@
 
     <script>
         // Connect to the WebSocket server
-        const socket = new WebSocket('wss://da31a35f-1569-401a-a184-34883756b070-00-7l9svo21v4r5.janeway.replit.dev/');
+        const socket = new WebSocket('wss://web.serveronthewall.com/');
 
         const chatContainer = document.getElementById('chat-container');
         const usernameInput = document.getElementById('username-input');
