--- a/Games.html
+++ b/Games.html
@@ -101,6 +101,11 @@
 <body>
     <div class="topbar">
         <h1>Void's Games</h1>
+        <div class="nav-buttons">
+            <a href="./" class="nav-button2">Home</a>
+            <a href="./Games.html" class="nav-button">Games</a>
+            <a href="./About.html" class="nav-button">About</a>
+        </div>
     </div>
     <div class="content" id="game-buttons-container">
     </div>
