--- a/Games.html
+++ b/Games.html
@@ -33,7 +33,32 @@
             font-size: 2.5em;
             color: #f5f5f5;
         }
+        
+        .nav-buttons {
+            margin-top: 10px;
+        }
 
+        .nav-button, .nav-button2 {
+            text-decoration: none;
+            background-color: #333;
+            border: none;
+            color: #fff;
+            padding: 10px 20px;
+            margin: 5px;
+            cursor: pointer;
+            font-size: 1em;
+            border-radius: 30px;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+
+        .nav-button:hover {
+            background-color: #555;
+            transform: scale(1.05);
+        }
+
+        .nav-button2 {
+            background-color: #666;
+        }
         .content {
             display: flex;
             flex-wrap: wrap; 
