--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
 
     <script>
         async function fetchGames() {
-            const response = await fetch('path/to/your/games.json');
+            const response = await fetch('/games.json');
             return await response.json();
         }
 
