--- a/index.html
+++ b/index.html
@@ -151,6 +151,24 @@
             font-size: 1.5em;
         }
 
+        /* Modified button styles to make them smaller */
+        .game-card a {
+            display: block;
+            text-decoration: none;
+            background-color: #333;
+            color: #fff;
+            padding: 8px 12px; /* Smaller padding */
+            font-size: 1em; /* Smaller font size */
+            border-radius: 15px;
+            transition: background-color 0.3s, transform 0.2s;
+            text-align: center;
+        }
+
+        .game-card a:hover {
+            background-color: #555;
+            transform: scale(1.05);
+        }
+
         .footer {
             background-color: #1a1a1a;
             text-align: center;
