--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
             <div class="game-card">
                 <a href="./game.html?game=Subway%20Surfers">
-                    <img src="./img/game3.png" alt="Game 3">
+                    <img src="./img/subwaysurfers.png" alt="Game 3">
                     <p>Play Subway Surfers!</p>
                 </a>
             </div>
