--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         }
 
         .game-card img {
-            width: 100%;
+            width: 8px;
             border-radius: 10px;
         }
 
@@ -151,7 +151,6 @@
             font-size: 1.5em;
         }
 
-        /* Modified button styles to make them smaller */
         .game-card a {
             display: block;
             text-decoration: none;
