--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             width: 200px; /* Set a fixed width */
             height: 200px; /* Set a fixed height to make it square */
             background-color: #333;
-            margin: 0; /* Remove margin */
+            margin: 10px; /* Add margin for spacing */
             border-radius: 15px;
             transition: transform 0.2s;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
