--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </div>
             <div class="game-card">
                 <a href="./game.html?game=Subway%20Surfers">
-                    <img src="./img/subwaysurfers.png" alt="Game 3">
+                    <img src="./img/subwaysurfers.jpeg" alt="Game 3">
                     <h3>Subway Surfers</h3>
                     <p>Play Subway Surfers!</p>
                 </a>
