--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <a href="./game.html?game=Subway%20Surfers">
                     <img src="./img/other.jpeg" alt="Game 3">
                     <h3>Subway Surfers</h3>
-                    <p>Play Subway Surfers!</p>
+                    <p>Play the mobile game Subway Surfers!</p>
                 </a>
             </div>
         </div>
